  in a non-C grade, it necessarily ignores the pragma, but normally
  it prints a warning about this fact. The compiler now supports
  a new attribute, `disable_warning_if_ignored`, that suppresses
  such warnings for a `pragma memo` if included in the pragma's
  attribute list, like this:

        :- pragma memo(predname/arity, [disable_warning_if_ignored])]).

Changes to the Mercury compiler
-------------------------------

* If a command line first enables an optimization (say `opt1`), and then
  sets the optimization level to `N` with `-O<N>`, then the compiler will now
  keep `opt1` enabled even if `opt1` is not normally enabled at optimization
  level `N`.

Portability improvements
------------------------

* We have ported Mercury to Linux AArch64 (ARM64) systems.

Changes to the Mercury debugger
-------------------------------

* The `list` command may now call an external command to print source listings;
  the command is set using `list_cmd`.  For example, the command could
  produce syntax highlighted source listings.

* We have removed support for browsing terms as XML (`browse --xml`)
  as it was unmaintained and did not work any more. The `browse --web`
  command provides an alternative method for interactively exploring a term.


NEWS for Mercury 20.06.1
========================

This is a bug-fix release.

* [Mantis bug #519]. We have deleted an old workaround from the Tcl/Tk
  binding in the extras that causes linking errors with recent versions
  of Tcl/Tk.

* [Mantis bug #514]. We have fixed a bug that caused linking errors
  in the deep profiling version of the Mercury runtime library when using
  GCC with the `-fno-common` option.

  Users of GCC 10 should note that `-fno-common` is now the default.

* [Mantis bug #513]. We have fixed a bug that caused the compiler to
  generate code that incorrectly reads variable values from the stack
  in disjunctions.

* [Github issue #90]. We have fixed a bug that the caused the compiler