@@ -44,6 +44,10 @@ MCFLAGS-intermod_c_code =	--intermodule-optimization
 MCFLAGS-intermod_c_code2 =	--intermodule-optimization
 MCFLAGS-intermod_foreign_type = --intermodule-optimization
 MCFLAGS-intermod_foreign_type2 = --intermodule-optimization
+MCFLAGS-intermod_may_export_body =	--intermodule-optimization
+MCFLAGS-intermod_may_export_body2 =	--intermodule-optimization
+MCFLAGS-intermod_multimode =	--intermodule-optimization
+MCFLAGS-intermod_multimode_main = --intermodule-optimization
 MCFLAGS-intermod_poly_mode = 	--intermodule-optimization
 MCFLAGS-intermod_poly_mode_2 = 	--intermodule-optimization
 MCFLAGS-intermod_pragma_clause = --intermodule-optimization
@@ -52,8 +56,6 @@ MCFLAGS-intermod_try_goal =	--intermodule-optimization
 MCFLAGS-intermod_try_goal2 =	--intermodule-optimization
 MCFLAGS-intermod_type_qual =	--intermodule-optimization
 MCFLAGS-intermod_type_qual2 =	--intermodule-optimization
-MCFLAGS-intermod_multimode =	--intermodule-optimization
-MCFLAGS-intermod_multimode_main = --intermodule-optimization
 MCFLAGS-lco_double	    =	--optimize-constructor-last-call
 MCFLAGS-lco_mday_bug_1	    =	--optimize-constructor-last-call
 MCFLAGS-lco_mday_bug_2	    =	--optimize-constructor-last-call
